# libcrux-iot

./: .gitignore  .gitmodules  4rounds.py  README.md  VERIFICATION.md  benchmarks.md  binary-size-summary-95a43e554866d4eb2db411c066ca0fb528eddbfd.md  flake.nix  parameters.md
c/ml-dsa/extracted/: CMakeLists.txt  code_gen.txt  eurydice_glue.h  header.txt  libcrux_core.c  libcrux_core.h  libcrux_iot_mldsa65_portable.c  libcrux_iot_mldsa65_portable.h  libcrux_iot_mldsa_core.c  libcrux_iot_mldsa_core.h  libcrux_iot_sha3.c  libcrux_iot_sha3.h  libcrux_mldsa65_portable.c  libcrux_mldsa65_portable.h
c/ml-dsa/extracted/custom_glue/: core.h  custom_glue.h
c/ml-dsa/extracted/internal/: libcrux_core.h  libcrux_iot_mldsa65_portable.h  libcrux_iot_mldsa_core.h  libcrux_iot_sha3.h
c/sha3/extracted/: CMakeLists.txt  code_gen.txt  eurydice-include  eurydice_glue.h  header.txt  karamel  libcrux_iot_core.c  libcrux_iot_core.h  libcrux_iot_sha3.c  libcrux_iot_sha3.h  libcrux_iot_sha3_portable.c  libcrux_iot_sha3_portable.h  librux_iot_core.c  librux_iot_core.h
demo_client/: Cargo.toml  README.md
demo_client/.cargo/: config.toml
demo_host/: Cargo.toml  README.md
demo_host/src/: main.rs
esp32c6/: Cargo.toml  Readme.md
libcrux-RIOT-rs/: Cargo.toml  README.md  laze-project.yml
libcrux-RIOT-rs/src/: main.rs
libcrux-iot/: Cargo.toml
libcrux-iot-binary-size/: .gitignore  Cargo.toml  README.md  binary_size_report.py
libcrux-iot-binary-size/.cargo/: config.toml
libcrux-iot-binary-size/src/: main.rs
libcrux-iot/aes/: Cargo.toml  README.md  hax.py
libcrux-iot/aes/benches/: aesgcm.rs
libcrux-iot/aes/examples/: bench_typed_owned.rs  bench_typed_refs.rs
libcrux-iot/aes/src/: aes_gcm.rs  aes_gcm_128.rs  aes_gcm_256.rs  ctr.rs  gf128.rs  lib.rs  platform.rs  traits_api.rs
libcrux-iot/aes/tests/: key_centric.rs  self.rs  wycheproof.rs
libcrux-iot/ml-dsa/: Cargo.toml  README.md  VERIFICATION.md  hax.py  hax.sh  hax_aeneas.py  hax_aeneas.sh
libcrux-iot/ml-dsa/benches/: manual44.rs  manual65.rs  manual87.rs  ml-dsa.rs
libcrux-iot/ml-dsa/examples/: key_pair_65.rs  sign_44.rs  sign_65.rs  verify_65.rs
libcrux-iot/ml-dsa/src/: arithmetic.rs  constants.rs  hash_functions.rs  matrix.rs  ml_dsa_44.rs  ml_dsa_65.rs  ml_dsa_87.rs  ml_dsa_generic.rs  ntt.rs  polynomial.rs  pre_hash.rs  sample.rs  samplex4.rs  types.rs
libcrux-iot/ml-dsa/tests/: acvp.rs  nistkats.rs  self.rs  wycheproof_sign.rs  wycheproof_verify.rs
libcrux-iot/ml-kem/: Cargo.toml  HAX_AENEAS_PATCHES.md  README.md  VERIFICATION.md  hax.py  hax_aeneas.py  hax_aeneas.sh
libcrux-iot/ml-kem/benches/: ml-kem.rs
libcrux-iot/ml-kem/examples/: decapsulate.rs  encapsulate.rs  keygen.rs
libcrux-iot/ml-kem/proofs/: verification_status.md
libcrux-iot/ml-kem/src/: constant_time_ops.rs  hash_functions.rs  ind_cca.rs  ind_cpa.rs  invert_ntt.rs  lib.rs  matrix.rs  mlkem1024.rs  mlkem512.rs  mlkem768.rs  ntt.rs  polynomial.rs  pqcp.rs  sampling.rs  serialize.rs  spec.rs  types.rs  utils.rs  variant.rs  vector.rs
libcrux-iot/ml-kem/tests/: acvp.rs  cross_spec.rs  cross_spec_proptests.rs  kyber.rs  ml-kem.rs  nistkats.rs  self.rs  wycheproof.rs
libcrux-iot/sha3/: .req-manifest.json  .reqs.toml  CLAUDE.md  Cargo.toml  Makefile  VERIFICATION.md  codegen.py  hax.py  hax.sh  hax_aeneas.py  hax_aeneas.sh  issues.md  req-report.html
libcrux-iot/sha3/proofs/: HacspecSha3.lean  LibcruxIotSha3.lean  lakefile.toml
libcrux-iot/sha3/specs/: api.md
libcrux-iot/sha3/src/: hasher.rs  impl_digest_trait.rs  keccak.rs  lane.rs  lib.rs  secrets.rs  state.rs
libcrux-iot/sha3/tests/: cavp.rs  cross_spec_proptests.rs  incremental.rs  sha3.rs
libcrux-nrf52832/: Cargo.toml  memory.x
libcrux-nrf52832/.cargo/: config.toml
libcrux-nrf52832/tests/: integration.rs
libcrux-nucleo-l4r5zi/: .gitignore  4rounds-libcrux-inplace-norust.asm  4rounds-libcrux-norust.asm  4rounds-libcrux.asm  4rounds-pqm4.asm  Cargo.toml  DEBUG.md  PERFORMANCE.md  README.md  STACK-USAGE.md  build.rs  measure-cycles.sh  measure-perf.sh  measure-stacks-qemu.sh  measure-stacks.sh  memory-qemu.x  memory.x  parse_bench.py  qemu-runner.sh  run-qemu.sh
libcrux-nucleo-l4r5zi/.cargo/: config.toml
libcrux-nucleo-l4r5zi/src/: assets.rs  cycle_counter.rs  init.rs  lib.rs  real_time.rs  stack.rs
libcrux-nucleo-l4r5zi/src/assets/: mldsa.rs  mlkem.rs
libcrux-nucleo-l4r5zi/tests/: integration.rs
libcrux-testbench/: Cargo.toml
libcrux-testbench/src/: arithmetic.rs  lib.rs  mldsa.rs  mlkem.rs  sha3_256.rs
libcrux/cavp/: Cargo.toml
libcrux/libcrux-intrinsics/: Cargo.toml
libcrux/libcrux-ml-dsa/: Cargo.toml
libcrux/libcrux-ml-dsa/benches/: manual44.rs  manual65.rs  manual87.rs
libcrux/libcrux-ml-dsa/examples/: sign_65.rs
libcrux/libcrux-ml-dsa/src/: arithmetic.rs  hash_functions.rs  matrix.rs  ml_dsa_44.rs  ml_dsa_65.rs  ml_dsa_87.rs  ml_dsa_generic.rs  ntt.rs  sample.rs  simd.rs
libcrux/libcrux-ml-dsa/tests/: nistkats.rs  self.rs  wycheproof_sign.rs  wycheproof_verify.rs
libcrux/libcrux-ml-kem/: Cargo.toml  README.md  env.sh
libcrux/libcrux-ml-kem/benches/: ml-kem.rs
libcrux/libcrux-ml-kem/examples/: test.rs
libcrux/libcrux-ml-kem/src/: arithmetic.rs  compress.rs  cortex_m.rs  hash_functions.rs  ind_cca.rs  ind_cpa.rs  invert_ntt.rs  lib.rs  matrix.rs  mlkem1024.rs  mlkem512.rs  mlkem768.rs  ntt.rs  polynomial.rs  sampling.rs  serialize.rs  utils.rs  variant.rs  vector.rs
libcrux/libcrux-ml-kem/tests/: acvp.rs  nistkats.rs  self.rs
libcrux/libcrux-platform/: Cargo.toml
libcrux/libcrux-platform/src/: lib.rs
libcrux/libcrux-sha3/: 4rounds.py  Cargo.toml  codegen.py  keccakf1600.py  keccaktools-generated-interleaved-inplace.cmacro
libcrux/libcrux-sha3/benches/: sha3.rs
libcrux/libcrux-sha3/src/: alloc.rs  generic_keccak.rs  keccak.rs  lane.rs  lib.rs  portable_keccak.rs  split_lanes_keccak.rs  state.rs  traits.rs
libcrux/libcrux-sha3/tests/: 4rounds.rs  cavp.rs  sha3.rs
libcrux/macros/: Cargo.toml
specs/sha3/: Cargo.toml  hax_aeneas.py
specs/sha3/src/: keccak_f.rs  lib.rs  sponge.rs
specs/sha3/tests/: cavp.rs  compare_ref.rs
(+522 files in other folders)
