[workspace]
members = ["ml-dsa", "ml-kem", "sha3"]
resolver = "3"

[workspace.package]
version = "0.0.3"
authors = ["Cryspen"]
license = "AGPL-3.0-only"
homepage = "iot.cryspen.com" # TODO: Set this up
edition = "2021"
repository = "https://github.com/cryspen/libcrux-iot"
readme = "README.md"

[workspace.dependencies]
libcrux-secrets = { version = "0.0.3" }
libcrux-macros = { version = "0.0.3" }
libcrux-traits = { git = "https://github.com/cryspen/libcrux" }

cavp = { version = "0.0.2" }
hax-lib = { version = "0.3.2" }


[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hax)', 'cfg(eurydice)', 'cfg(doc_cfg)'] }
