[workspace]
members = ["ml-dsa", "ml-kem", "sha3", "aes"]
resolver = "3"

[workspace.package]
version = "0.0.3"
authors = ["Cryspen"]
license = "AGPL-3.0-only"
homepage = "iot.cryspen.com"                          # TODO: Set this up
edition = "2021"
repository = "https://github.com/cryspen/libcrux-iot"
readme = "README.md"

[workspace.dependencies]
libcrux-kats = { git = "https://github.com/cryspen/libcrux.git" }
libcrux-secrets = { version = "0.0.5" }
libcrux-macros = { version = "0.0.3" }
libcrux-traits = { version = "0.0.7" }

hax-lib = { version = "0.3.6" }


[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
    'cfg(hax_backend_lean)',
] }

[patch.crates-io]
hax-lib = { git = "https://github.com/cryspen/hax", branch = "jonas/fstar-wrapping" }
# patch until libcrux-secrets 0.0.6 is released
libcrux-secrets = { git = "https://github.com/cryspen/libcrux.git", rev = "c4253d211a605f4a284c595fc6ca28ae18dd07ba" }

[profile.release-debug]
inherits = "release"
debug = true
strip = false
