[package]
authors = ["Jonas Schneider-Bensch <jonas@cryspen.com>"]
name = "libcrux-nucleo-l4r5zi"
edition = "2021"
version = "0.1.0"

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-semihosting = "0.5.0"
libcrux-ml-kem = { git = "https://github.com/cryspen/libcrux.git", default-features = false, features = ["pre-verification", "mlkem512", "mlkem768", "mlkem1024"] }
libcrux-ml-dsa = { git = "https://github.com/cryspen/libcrux.git" }
embassy-stm32 = { version = "0.1.0", features = ["stm32l4r5zi", "defmt", "time", "time-driver-any", "memory-x"] }
libcrux-iot-testutil = { path = "../libcrux-iot-testutil" } 
embassy-time = "0.3.2"
embedded-alloc = "0.6.0"

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

