[package]
name = "libcrux-testbench"
version = "0.1.0"
edition = "2021"

[dependencies]
libcrux-ml-dsa = { path = "../libcrux/libcrux-ml-dsa" }
libcrux-ml-kem = { path = "../libcrux/libcrux-ml-kem", default-features = false, features = [ "pre-verification", "mlkem512", "mlkem768", "mlkem1024",
"armv7em"
] } 
libcrux-iot-testutil = { path = "../libcrux-iot-testutil" }
defmt = { version = "0.3"}

[features]
default = ["mldsa87", "mlkem1024"]
mldsa44 = []
mldsa65 = []
mldsa87 = []
mlkem512 = []
mlkem768 = []
mlkem1024 = []
