[package]
name = "libcrux-testbench"
version = "0.1.0"
edition = "2021"

[dependencies]
libcrux-iot-ml-dsa = { path = "../libcrux-iot/ml-dsa" }
libcrux-iot-ml-kem = { path = "../libcrux-iot/ml-kem", default-features = false, features = [ "mlkem512", "mlkem768", "mlkem1024",] } 
libcrux-iot-testutil = { path = "../libcrux-iot-testutil" }

[features]
default = ["mldsa87", "mlkem1024"]
mldsa44 = []
mldsa65 = []
mldsa87 = []
mlkem512 = []
mlkem768 = []
mlkem1024 = []
