[package]
name = "libcrux-iot-ml-dsa"
description = "Libcrux-IoT ML-DSA implementation"
publish = false

readme.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true

[lib]
bench = false # so libtest doesn't eat the arguments to criterion

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcrux-iot-sha3 = { path = "../sha3" }
libcrux-macros.workspace = true
hax-lib.workspace = true

[dev-dependencies]
rand = { version = "0.8" }
hex = { version = "0.4.3", features = ["serde"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
criterion = "0.5"
pqcrypto-dilithium = { version = "0.5.0" }         #, default-features = false

[features]
default = ["mldsa44", "mldsa65", "mldsa87"]
acvp = []                                   # expose internal API for ACVP testing
test-utils = []                             # exposing internal functions for testing

# Features for the different key sizes of ML-DSA
mldsa44 = []
mldsa65 = []
mldsa87 = []

# use stack-optimized verification
stack = []

# std support
std = []

[[bench]]
name = "manual44"
harness = false

[[bench]]
name = "manual65"
harness = false

[[bench]]
name = "manual87"
harness = false

[[bench]]
name = "ml-dsa"
harness = false

[lints]
workspace = true
