[package]
name = "libcrux-iot-sha3"
description = "Libcrux-IoT SHA-3 implementation"
exclude = ["/c.sh", "/c.yaml", "/tests/tv", "tests/cavp.rs"]
publish = false

readme.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true

[lib]
bench = false # so libtest doesn't eat the arguments to criterion

[dependencies]
libcrux-secrets.workspace = true

# This is only required for verification.
# The hax config is set by the hax toolchain.
[target.'cfg(hax)'.dependencies]
hax-lib = { version = "0.3.0", git = "https://github.com/hacspec/hax/" }

[features]
full-unroll = []
check-secret-independence = ["libcrux-secrets/check-secret-independence"]

[dev-dependencies]
criterion = "0.5.1"
hex = "0.4.3"
rand = "0.8.5"
cavp.workspace = true #{ version = "0.0.2-beta.2", path = "../cavp" }
pretty_env_logger = "0.5.0"

[lints]
workspace = true
