[package]
name = "cavp"
version = "0.0.2-beta.2"
authors = ["Cryspen"]
license = "AGPL-3.0-only"
homepage = "https://github.com/cryspen/libcrux-iot"
edition = "2021"
repository = "https://github.com/cryspen/libcrux-iot"
description = "Libcrux helper to read NIST CAVP test vectors."

[dependencies]
hex = "0.4.3"
log = "0.4.22"

[dev-dependencies]
pretty_env_logger = "0.5.0"
