[package]
name = "libcrux-intrinsics"
version = "0.0.2-beta.2"
authors = ["Cryspen"]
license = "AGPL-3.0-only"
homepage = "https://github.com/cryspen/libcrux-iot"
edition = "2021"
repository = "https://github.com/cryspen/libcrux-iot"
description = "Libcrux-IoT intrinsics crate"
exclude = ["/proofs"]

[dependencies]
hax-lib = { version = "0.3", git = "https://github.com/hacspec/hax/" }

[features]
simd128 = []
simd256 = []

[dev-dependencies]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hax)', 'cfg(eurydice)'] }
