[package]
name = "libcrux-platform"
version = "0.0.2-beta.3"
authors = ["Cryspen"]
license = "AGPL-3.0-only"
homepage = "https://github.com/cryspen/libcrux-iot"
edition = "2021"
repository = "https://github.com/cryspen/libcrux-iot"
readme = "Readme.md"
description = "Platform detection crate for libcrux-iot."

[dependencies]
libc = "0.2.153"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hax)', 'cfg(eurydice)'] }
