[package]
name = "libcrux-sha3"
version = "0.0.2-beta.2"
authors = ["Cryspen"]
license = "AGPL-3.0-only"
homepage = "https://github.com/cryspen/libcrux-iot"
edition = "2021"
repository = "https://github.com/cryspen/libcrux-iot"
readme = "README.md"
description = "Libcrux-IoT SHA-3 implementation"
exclude = ["/c.sh", "/c.yaml", "/tests/tv", "tests/cavp.rs"]

[lib]
bench = false # so libtest doesn't eat the arguments to criterion

[dependencies]
libcrux-platform = { version = "0.0.2-beta.2", path = "../libcrux-platform" }
libcrux-intrinsics = { version = "0.0.2-beta.2", path = "../libcrux-intrinsics" }
libcrux-macros = {git = "https://github.com/cryspen/libcrux"}
# This is only required for verification.
# The hax config is set by the hax toolchain.
[target.'cfg(hax)'.dependencies]
hax-lib = { version = "0.1.0-alpha.1", git = "https://github.com/hacspec/hax/" }

[features]
simd128 = []
simd256 = []

[[bench]]
name = "sha3"
harness = false

[dev-dependencies]
criterion = "0.5.1"
hex = "0.4.3"
rand = "0.8.5"
cavp = { version = "0.0.2-beta.2", path = "../cavp" }
pretty_env_logger = "0.5.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hax)', 'cfg(eurydice)'] }
